# CDP_Merged2

./: .bandit.yml  .dockerignore  .env.database.example  .env.development  .env.example  .env.local.example  .env.test  .geocoding_parallel_runner.pid  .gitignore  .pre-commit-config.yaml  .python-path  .website_discovery_runner.pid  AGENTS.md  AZURE_RATE_LIMIT_FIX_REPORT.md  BACKLOG.md  CHANGELOG.md  DECISIONS.md  Dockerfile  FINAL_FIX_REPORT.md  HANDOVER_TEMPLATE.md  Makefile  NEXT_ACTIONS.md  PROJECT_STATE.yaml  PUBLIC_PATH_FIX_REPORT.md  PUBLIC_PATH_INCIDENT.md  README.md  SCENARIO_ACCEPTANCE_PROGRAM.md  STATUS.md  STRATEGIC_ROADMAP.md  WORKLOG.md  chainlit.md  chatbot_360_retest_initial.md  coverage.xml  debug_astream_events.py  debug_second_call.py  debug_second_call_direct.py  deploy_schema.py  docker-compose-tracardi-es.yml  docker-compose-tracardi.yml  docker-compose.postgres.yml  (+14 more)
.chainlit/: config.toml
.chainlit/translations/: zh-CN.json
.github/workflows/: cd.yml  ci.yml  cost-monitor.yml  infra-terraform.yml  infra-tracardi.yml  operator-smoke.yml
.mcp/: claude_desktop_config.json  client_config_example.json
apps/operator-shell/: .env.example  README.md  metadata.json  next.config.ts  package-lock.json  package.json
config/: alert_rules.json  eventhub_production.json  monitoring_dashboard.json
config/examples/: tracardi.env.example  webhook.env.example
configs/: logging.yml
configs/prompts/: agent_en.txt
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE_AZURE.md  ARCHITECTURE_DECISION_RECORD.md  AUDIT_SUMMARY.md  AUTOTASK_INTEGRATION.md  AZURE_COST_OPTIMIZATION_SAFE.md  AZURE_CREDENTIAL_FIX.md  BROWSER_AUTOMATION_GUIDE.md  BUSINESS_CASE.md  BUSINESS_CONFORMITY_MATRIX.md  CDP_MERGED_RESEARCH_CLARIFICATIONS.md  CDP_MERGED_RESEARCH_REQUEST.md  COST_OPTIMIZATION_SUMMARY.md  DATA_BACKUP_PROCEDURE.md  DATA_CLEANUP_ENRICHMENT_PLAN.md  DATA_CLEANUP_IMPLEMENTATION.md  DATA_MIGRATION_GUIDE.md  DEBUG_WORKFLOW.md  DEMO_GUIDE.md  DEMO_SOURCE_MOCK_CONTRACT.md  ENRICHMENT.md  ENRICHMENT_SUMMARY.md  HANDOFF_2026-03-02_BROWSER_TESTING.md  HANDOFF_2026-03-02_CHATBOT_LLM_FIX.md  HANDOFF_2026-03-02_MYPY_FIXES.md  HANDOFF_2026-03-03_TRACARDI_STABILITY.md  HANDOFF_IAC_COMPLIANCE_GUI_HOTFIX_2026-03-02.md  HANDOFF_PROFILE_SEARCH_FIX_2026-03-02.md  HANDOFF_TRACARDI_2500_SYNC_BLOCKED_2026-03-02.md  ILLUSTRATED_GUIDE.html  ILLUSTRATED_GUIDE.md  ILLUSTRATED_GUIDE_AUDIT.md  ILLUSTRATED_GUIDE_COMPLIANCE.md  ILLUSTRATED_GUIDE_v3.5.html  ITERATIVE_API_TEST_HARNESS_STATE.md  KBO_CLEANUP_COMPLETION_SUMMARY.md  KBO_DATA_GUIDE.md  KBO_IMPORT_GUIDE.md  KBO_INGESTION.md  MCP_SERVER.md  (+26 more)
docs/archive/: AUDIT_REPORT_2026-02-20.md  README.md
docs/evals/: OPERATOR_EVAL_STANDARD.md  README.md  operator_eval_cases.v1.json  operator_eval_scorecard_template.csv
docs/illustrated_guide/: COVERAGE_ANALYSIS.md  ILLUSTRATED_GUIDE.md  MANAGER_DEMO_GUIDE.md  MANAGER_ILLUSTRATED_GUIDE.md  SCREENSHOT_INVENTORY.md
docs/obsolete/: README.md
docs/research/: RESEARCH_ANALYSIS_2026-02-28.md
docs/screenshots/: .gitignore  README.md
docs/specs/: DATABASE_SCHEMA.md
functions/: event_processor.py  event_processor_optimized.py  function_optimized.json  host.json
functions/event_processor/: function.json
infra/: aca_vnet_websocket.bicep
infra/cbe_webhook/: Dockerfile  main.py
infra/ngrok-systemd/: README.md  cdp-operator-api.service  cdp-operator-shell.service  check-ngrok-cdp.sh  install.sh  ngrok-cdp-watchdog.service  ngrok-cdp-watchdog.timer  ngrok-cdp.service  ngrok.yml  status.sh
infra/scripts/: cdp-down.sh  cdp-status.sh  cdp-up.sh  quick-cost-opt.sh  shutdown-restart-test.sh
infra/terraform/: README.md  cbe_webhook.tf  cost-optimization.tf  main.tf  outputs.tf  postgresql.tf  terraform.tfvars.example  variables-cost-opt.tf  variables-postgresql.tf  variables.tf
infra/tracardi/: README.md  containerapp.tf  data.tf  main.tf  openai.tf  outputs.tf  postgres.tf  terraform.tfvars.example  tfplan  tfplan-rebuild  variables.tf
infra/tracardi-minimal/: .terraform.lock.hcl  main.tf  outputs.tf  tfplan  variables.tf  versions.tf
logs/enrichment/: cbe_running_cursor.json  geocoding_parallel_cursor.json  website_discovery_cursor.json
memory/: 2026-03-04.md  2026-03-06.md  2026-03-07.md
ops/: README.md
output/: ILLUSTRATED_GUIDE.html  csv_export_view.html  it_services_brussels_segment.csv
output/agent_artifacts/: gent-restaurants-sample-50-name-email-phone-city-zip-code_20260307_201213.csv  regression-gent-restaurants_20260307_170755.markdown  snackbars-fastfood-gent_20260307_181718.csv  top-20-restaurants-in-gent_20260307_164918.markdown
public/: cdp-custom.css  theme.json
reports/: GPT51_AVAILABILITY_PROOF.md  MODEL_BENCHMARK_REPORT.md  MODEL_BENCHMARK_REPORT_GPT5_VERIFIED.md  memory_benchmark.json  memory_performance_report.md  quality_report.json
reports/archive/: enrichment_run_result_20260227.json
reports/evals/: run_2026-03-14.json
reports/scenarios/: sc18_evidence_v2.json  sc18_public_evidence.json
scripts/: README.md  benchmark_memory.py  benchmark_models.py  cdp_event_processor.py  check_state_docs.py  create_360_demo_companies.py  create_account.py  debug_teamleader_error.py  demo_all_integrations.py  demo_autotask_integration.py  demo_exact_integration.py  demo_smoke_test.py  demo_teamleader_integration.py  deploy_webhook_server.sh  direct_teamleader_import.py  doc_lint.py  edge_scenario_runner.js  enrich_companies_batch.py  enrich_companies_chunked.py  enrich_dashboard.py  enrich_monitor.py  enrich_profiles.py  eventhub_consumer.py  fix_resend_event_source.py  fix_schema.py  generate_demo_dataset.py  generate_teamleader_mock_data.py  host_verify.sh  hourly_status.sh  import_kbo_full_enriched.py  import_kbo_sqlite_lookups.py  import_kbo_streaming.py  ingest_to_tracardi.py  kbo_import_manager.sh  kbo_runtime.py  mcp_cdp_helper.py  migrate_schema_v2.2.py  monitor_enrichment.sh  monitor_projection.py  operator_smoke.py  (+55 more)
scripts/archive/: README.md  (+10 more)
src/: __init__.py  app.py  config.py  mcp_server.py  operator_api.py
tests/: conftest.py  test_segment_creation_fix.py
(+352 files in other folders)
